fix: Resovle small layout issues

--- a/src/js/components/menu-bar/menu-bar.css
+++ b/src/js/components/menu-bar/menu-bar.css
@@ -8,7 +8,8 @@
 
 	-webkit-app-region: drag;
 
-	box-sizing: inherit;
+	box-sizing: border-box;
+	z-index: 1;
 }
 
 nav {
